--- a/antigravity.conf
+++ b/antigravity.conf
@@ -2,5 +2,5 @@
 #!desc=强制 language_server_macos_arm 进程走代理
 #!system=mac
 
-[Process]
-language_server_macos_arm = proxy
+[Rule]
+PROCESS-NAME,language_server_macos_arm,PROXY
